overflow corrected

--- a/ui/public/styles/components/detail.scss
+++ b/ui/public/styles/components/detail.scss
@@ -42,10 +42,14 @@
   color: $pinksoft500;
   margin-bottom: 11px;
   padding-bottom: 0;
+}
+
+.c-detail-body {
   a {
     overflow-wrap: anywhere;
-  }
+  }  
 }
+
 
 .c-detail-title--formation {
   color: #00AC8C;
